--- a/index.html
+++ b/index.html
@@ -1,1 +1,296 @@
-<p> Hallo Welt </p>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  
+    <base href="https://birresborn.de/">  
+  
+  <title>Birresborn - Eifelgemeinde mit Herz &hearts;</title>
+  <link href="css/build.css" rel="stylesheet"> 
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCDbTCiWaswNy5yUVKXD2GOpE84pHahXOg" type="text/javascript"></script>
+  <script src="//cdn.ckeditor.com/4.4.7/standard/ckeditor.js"></script>
+  <script src='https://www.google.com/recaptcha/api.js?hl=de'></script>
+  <!-- Quelle folgender Scriptblock: http://praxistipps.chip.de/cookie-hinweis-auf-webseite-einfuegen-eu-richtlinie_42445 -->
+  <script type="text/javascript">
+      window.cookieconsent_options = {"message":"Diese Webseite verwendet Cookies, um Ihnen ein angenehmeres Surfen zu erm&ouml;glichen.","dismiss":"Bitte best&auml;tigen!","learnMore":"Mehr Infos","link":null,"theme":"dark-top"};
+  </script> 
+
+</head>
+<body>
+    <section class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 id="headline"></h1>
+                <p id="announce"></p> 
+                (Die Maus über das kleine Fenstersymbol ziehen um das Foto zu sehen)<br/>
+                Fotografiert von: <span id="fotoby"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+               <div id="map-canvas" style="height: 800px;"></div>
+            </div>
+        </div>
+
+
+        <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/birresborn/albums/72177720312738319" title="Adventsfenster 2023"><img src="https://live.staticflickr.com/65535/53335772043_4bba6738a2_z.jpg" width="800" height="600" alt="Adventsfenster 2023"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+    </section>
+
+    <script src="js/externals.js"></script>
+    <script src="js/build.js"></script>
+<script>
+function initialize() {
+
+   var calendar = [
+{
+  'pos'     : new google.maps.LatLng(50.17975594829108, 6.626874550783409),
+  'name'    : 'Familie Vanreck',
+  'address' : 'Neustra&szlig;e 16',
+  'photoFull' : 'https://live.staticflickr.com/65535/53369123318_2f92e61d77_o.jpg',
+  'photo'   : 'https://live.staticflickr.com/65535/53369123318_018e5bac2f_z.jpg',
+  'photoBy' : 'Rudi Benz'
+}, 
+{
+  'pos'     : new google.maps.LatLng(50.1752951091084, 6.6249406441505005),
+  'name'    : 'Daniela Peters',
+  'address' : 'M&uuml;rlenbacher Stra&szlig;e 6',
+  'photoFull' : 'https://live.staticflickr.com/65535/53369923757_ba567eea6c_o.jpg',
+  'photo'   : 'https://live.staticflickr.com/65535/53369923757_45cda3f637_z.jpg',
+  'photoBy' : 'Rudi Benz'
+},
+{
+  'pos'     : new google.maps.LatLng(50.17823228499156, 6.622417057661863),
+  'name'    : 'Familie Simonis',
+  'address' : 'In der Kehrt 15',
+  'photoFull' : 'https://live.staticflickr.com/65535/53373107631_2aa3dd2ebe_o.jpg',
+  'photo'   : 'https://live.staticflickr.com/65535/53373107631_357d19af86_z.jpg',
+  'photoBy' : 'Rudi Benz'
+},
+{
+  'pos'     : new google.maps.LatLng(50.19056361608636, 6.616951182514266),
+  'name'    : 'Familie Schifferings',
+  'address' : 'Vulkanhof',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz'  
+},
+{
+  'pos'     : new google.maps.LatLng(50.18062299231784, 6.6254087419318815),
+  'name'    : 'Familie Schnieder',
+  'address' : 'B&uuml;desheimer Stra&szlig;e 38',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.178155850224435, 6.623370339032076),
+  'name'    : 'Familie Kohnen',
+  'address' : 'Birkenweg 16',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.176767076635386, 6.6229655937149445),
+  'name'    : 'Familie Lorig',
+  'address' : 'Birkenweg 30',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.177612610594956, 6.630089192071052),
+  'name'    : 'Familie Schlösser',
+  'address' : 'Michelbacher Stra&szlig;e 8',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.1799293892209, 6.6232720029195615),
+  'name'    : 'Familie Irsfeld',
+  'address' : 'In der Kehrt 8',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+}, 
+{
+  'pos'     : new google.maps.LatLng(50.17742894117673, 6.618677165361083),
+  'name'    : 'Familie Junk',
+  'address' : 'Kopper Stra&szlig;e 42',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+}, 
+{
+  'pos'     : new google.maps.LatLng(50.17679656987223, 6.628551034050398),
+  'name'    : 'Jugendfeuerwehr Birresborn',
+  'address' : 'Bahnhofstra&szlig;e 26',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.17548817126219, 6.625359936047567),
+  'name'    : 'Familie Göres',
+  'address' : 'M&uuml;rlenbacher Stra&szlig;e 1',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{  
+  'pos'     : new google.maps.LatLng(50.17358852313214, 6.620574260805694),
+  'name'    : 'Familie Bleses',
+  'address' : 'In der Noll 13',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.175856949000966, 6.6243416465825895),
+  'name'    : 'Physiotherapie Tina Br&uuml;ck',
+  'address' : 'Kopper Stra&szlig;e 7',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{  
+  'pos'     : new google.maps.LatLng(50.174802935158944, 6.624434754806541),
+  'name'    : 'Familie Bleses',
+  'address' : 'M&uuml;rlenbacher Stra&szlig;e 10',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.176283498437826, 6.623335844802905),
+  'name'    : 'Familie B&ouml;r&ouml;cz',
+  'address' : 'Kopper Stra&szlig;e 18',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.176029458153515, 6.624074715161486),
+  'name'    : 'Familie Stahl',
+  'address' : 'Kopper Stra&szlig;e 11',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.17764223899639, 6.624982933647776),
+  'name'    : 'Grundschule Birresborn',
+  'address' : 'Neustra&szlig;e 7',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.17567753516035, 6.624948532205393),
+  'name'    : 'B&auml;ckerei Blasius',
+  'address' : 'Kopper Stra&szlig;e 3',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.18198987655689, 6.630953780862615),
+  'name'    : 'Familie Becker',
+  'address' : 'Kalkweg 4',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png'
+},
+{
+  'pos'     : new google.maps.LatLng(50.17983777346937, 6.627750317704629),
+  'name'    : 'Familie Schmidt',
+  'address' : 'Neustrasse 21',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+}, 
+{
+  'pos'     : new google.maps.LatLng(50.17456636534942, 6.624300448624867),
+  'name'    : 'Familie Thieltges',
+  'address' : 'Br&uuml;ckenstra&szlig;e 2 ',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.17709564526966, 6.6261124199518795),
+  'name'    : 'Familie Bitzigeio',
+  'address' : 'Gerolsteiner Stra&szlig;e 18',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+{
+  'pos'     : new google.maps.LatLng(50.17550476669239, 6.62444337238004),
+  'name'    : 'Ortsgemeinde Birresborn',
+  'address' : 'Altes Rathaus',
+  'photoFull' : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photo'   : 'https://live.staticflickr.com/65535/53335772043_4d0de202b0_o.png',
+  'photoBy' : 'Rudi Benz' 
+},
+  ];
+
+
+  var myLatlng = new google.maps.LatLng(50.17581834574783, 6.625217908998995); // Ortsmitte um die Karte zu zentrieren
+  var mapOptions = {
+    zoom: 17,
+    center: myLatlng,
+    scrollwheel: false
+  }
+  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  // [url=https://flic.kr/p/2pfSb3h][img]https://live.staticflickr.com/65535/53333118524_b8066cf4ba_t.jpg[/img][/url][url=https://flic.kr/p/2pfSb3h]Adventsfenstericon[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+
+  let headline = document.getElementById('headline');
+  let familie = document.getElementById('announce');
+  let adresse = document.getElementById('addresse');
+  let fensterfoto = document.getElementById('fensterfoto');
+ 
+  let dateToday = new Date();
+  
+  let runTo = calendar.length;
+  if (dateToday.getMonth() == 11) { //-- December is 11, stupid JS starts with January as 0
+     runTo = dateToday.getDate();
+  }
+  
+
+
+  function setWindowMarker(d) {
+    map.panTo(calendar[d].pos);
+    var marker = new google.maps.Marker({
+        icon: 'https://live.staticflickr.com/65535/53333118524_b8066cf4ba_t.jpg',
+        position: calendar[d].pos,
+        map: map,
+        title: calendar[d].name,
+        animation: google.maps.Animation.DROP
+    });
+
+    google.maps.event.addListener(marker, 'mouseover', function(event) {
+          this.setIcon(calendar[d].photo);
+    });
+    google.maps.event.addListener(marker, 'mouseout', function(event) {
+          this.setIcon('https://live.staticflickr.com/65535/53333118524_b8066cf4ba_t.jpg');
+    });
+
+
+    headline.innerHTML = (d+1) + ". Adventsfenster";
+    familie.innerHTML = calendar[d].name + ' - ' + calendar[d].address;
+    fotoby.innerHTML = calendar[d].photoBy;
+   }
+   
+  for (let c=0; c<runTo; c++) {
+    setTimeout(() => {
+        setWindowMarker(c);
+    }, c * 2000);
+  }
+
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
+    </script>
+  </body>
+</html>
