--- a/2024.html
+++ b/2024.html
@@ -28,9 +28,9 @@
     <script src="js/build.js"></script>
 
   <!--
-
   [url=https://flic.kr/p/2qxwTDG][img][/img][/url][url=https://flic.kr/p/2qxwTDG]Tag 01[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   [url=https://flic.kr/p/2qxDGo4][img][/img][/url][url=https://flic.kr/p/2qxDGo4]Tag 02[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qxJ2a6][img][/img][/url][url=https://flic.kr/p/2qxJ2a6]Tag 03[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   -->
 
 
@@ -52,7 +52,14 @@ var calendar = [
     'address' : 'M&uuml;rlenbacher Stra&szlig;e 6',
     'photo'   : 'https://live.staticflickr.com/65535/54179421335_43aa30f0e0.jpg',
     'photoBy' : 'Rudi Benz'
-  }
+  },
+  {
+    'pos'     : new google.maps.LatLng(50.17709564526966, 6.6261124199518795),
+    'name'    : 'Familie Bitzigeio',
+    'address' : 'Gerolsteiner Strasse 18',
+    'photo'   : 'https://live.staticflickr.com/65535/54180264947_6da180e75f.jpg',
+    'photoBy' : 'Rudi Benz'
+  }  
 ];
 
 
