--- a/2024.html
+++ b/2024.html
@@ -31,6 +31,8 @@
   [url=https://flic.kr/p/2qxwTDG][img][/img][/url][url=https://flic.kr/p/2qxwTDG]Tag 01[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   [url=https://flic.kr/p/2qxDGo4][img][/img][/url][url=https://flic.kr/p/2qxDGo4]Tag 02[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   [url=https://flic.kr/p/2qxJ2a6][img][/img][/url][url=https://flic.kr/p/2qxJ2a6]Tag 03[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qyfT2U][img][/img][/url][url=https://flic.kr/p/2qyfT2U]Tag 04[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qyf5GD][img][/img][/url][url=https://flic.kr/p/2qyf5GD]Tag 05[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   -->
 
 
@@ -59,7 +61,21 @@ var calendar = [
     'address' : 'Gerolsteiner Strasse 18',
     'photo'   : 'https://live.staticflickr.com/65535/54180264947_6da180e75f.jpg',
     'photoBy' : 'Rudi Benz'
-  }  
+  },
+  {
+    'pos'     : new google.maps.LatLng(50.19056361608636, 6.616951182514266),
+    'name'    : 'Familie Schifferings',
+    'address' : 'Vulkanhof',
+    'photo'   : 'https://live.staticflickr.com/65535/54186286090_67f386dd38.jpg',
+    'photoBy' : 'Rudi Benz'  
+  },  
+  {
+    'pos'     : new google.maps.LatLng(50.176767076635386, 6.6229655937149445),
+    'name'    : 'Familie Lorig',
+    'address' : 'Birkenweg 30',
+    'photo'   : 'https://live.staticflickr.com/65535/54186130229_5a4bc7edca.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
 ];
 
 
