--- a/2024.html
+++ b/2024.html
@@ -33,7 +33,15 @@
   [url=https://flic.kr/p/2qxJ2a6][img][/img][/url][url=https://flic.kr/p/2qxJ2a6]Tag 03[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   [url=https://flic.kr/p/2qyfT2U][img][/img][/url][url=https://flic.kr/p/2qyfT2U]Tag 04[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   [url=https://flic.kr/p/2qyf5GD][img][/img][/url][url=https://flic.kr/p/2qyf5GD]Tag 05[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzyhFV][img][/img][/url][url=https://flic.kr/p/2qzyhFV]Tag 06[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzF62m][img][/img][/url][url=https://flic.kr/p/2qzF62m]Tag 07[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzF8JF][img][/img][/url][url=https://flic.kr/p/2qzF8JF]Tag 08[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr  
+[url=https://flic.kr/p/2qzF8Jv][img][/img][/url][url=https://flic.kr/p/2qzF8Jv]Tag 09[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzF8LK][img][/img][/url][url=https://flic.kr/p/2qzF8LK]Tag 10[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzEcbq][img][/img][/url][url=https://flic.kr/p/2qzEcbq]Tag 11[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
+  [url=https://flic.kr/p/2qzEi12][img][/img][/url][url=https://flic.kr/p/2qzEi12]Tag 12[/url] by [url=https://www.flickr.com/photos/birresborn/]Gemeinde Birresborn[/url], on Flickr
   -->
+  
 
 
   
@@ -76,6 +84,62 @@ var calendar = [
     'photo'   : 'https://live.staticflickr.com/65535/54186130229_5a4bc7edca.jpg',
     'photoBy' : 'Rudi Benz' 
   },  
+  {
+    'pos'     : new google.maps.LatLng(50.18062299231784, 6.6254087419318815),
+    'name'    : 'Familie Schnieder',
+    'address' : 'B&uuml;desheimer Stra&szlig;e 38',
+    'photo'   : 'https://live.staticflickr.com/65535/54200999067_e0b1d3570b.jpg',
+    'photoBy' : 'Diane Schnieder' 
+  },   
+  {
+    'pos'     : new google.maps.LatLng(50.17550476669239, 6.62444337238004),
+    'name'    : 'Malteser Jugend',
+    'address' : 'Altes Rathaus',
+    'photo'   : 'https://live.staticflickr.com/65535/54202325610_92d550cfcd.jpg',
+    'photoBy' : 'Andrea Bitzigeio' 
+  },   
+  {
+    'pos'     : new google.maps.LatLng(50.177612610594956, 6.630089192071052),
+    'name'    : 'Familie Schlösser',
+    'address' : 'Michelbacher Stra&szlig;e 8',
+    'photo'   : 'https://live.staticflickr.com/65535/54202334735_8cdc2167cd.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },   
+  {
+    'pos'     : new google.maps.LatLng(50.17625786264458, 6.623147807409502),
+    'name'    : 'Familie Toma',
+    'address' : 'Kopper Stra&szlig;e 22',
+    'photo'   : 'https://live.staticflickr.com/65535/54202334725_d14822e678.jpg',
+    'photoBy' : 'Rudi Benz' 
+  }, 
+  {
+    'pos'     : new google.maps.LatLng(50.17421317744519, 6.624981297160603),
+    'name'    : 'Familie Dehnert',
+    'address' : 'M&uuml;rlenbacher Stra&szlig;e 9',
+    'photo'   : 'https://live.staticflickr.com/65535/54202334855_c8b8613523.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },   
+  {
+    'pos'     : new google.maps.LatLng(50.17561877393461, 6.618607422904403),
+    'name'    : 'Familie Hoffmann / Kemen',
+    'address' : 'Im Steinreich 30',
+    'photo'   : 'https://live.staticflickr.com/65535/54202151208_0d5ba61fd3.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },     
+  {
+    'pos'     : new google.maps.LatLng(50.17456636534942, 6.624300448624867),
+    'name'    : 'Familie Thieltges',
+    'address' : 'Br&uuml;ckenstra&szlig;e 2 ',
+    'photo'   : 'https://live.staticflickr.com/65535/54202170789_3b0468b020.jpg',
+    'photoBy' : 'Alex Thieltges' 
+  },  
+  {
+    'pos'     : new google.maps.LatLng(50.180801409620855, 6.6250492053497645),
+    'name'    : 'Familie Monix / Herscheid',
+    'address' : 'B&uumldesheimer Stra&szlig;e 15',
+    'photo'   : 'https://live.staticflickr.com/65535/54202170789_3b0468b020.jpg',
+    'photoBy' : 'Rudi BEnz' 
+  },    
 ];
 
 
