--- a/2024.html
+++ b/2024.html
@@ -138,8 +138,87 @@ var calendar = [
     'name'    : 'Familie Monix / Herscheid',
     'address' : 'B&uumldesheimer Stra&szlig;e 15',
     'photo'   : 'https://live.staticflickr.com/65535/54202170789_3b0468b020.jpg',
-    'photoBy' : 'Rudi BEnz' 
+    'photoBy' : 'Rudi Benz' 
   },    
+  {
+    'pos'     : new google.maps.LatLng(50.17679656987223, 6.628551034050398),
+    'name'    : 'Jugendfeuerwehr',
+    'address' : 'Feuerwehrhaus',
+    'photo'   : 'https://live.staticflickr.com/65535/54218932934_f2722d028f_b.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },    
+  {
+    'pos'     : new google.maps.LatLng(50.17823228499156, 6.622417057661863),
+    'name'    : 'Familie Simonis',
+    'address' : 'In der Kehrt 15',
+    'photo'   : 'https://live.staticflickr.com/65535/54217795522_c10ce58719_b.jpg',
+    'photoBy' : 'Rudi Benz'
+  },  
+  {  
+    'pos'     : new google.maps.LatLng(50.174802935158944, 6.624434754806541),
+    'name'    : 'Familie Bleses',
+    'address' : 'M&uuml;rlenbacher Stra&szlig;e 10',
+    'photo'   : 'https://live.staticflickr.com/65535/54217795497_6fc958cb02_b.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
+  {  
+    'pos'     : new google.maps.LatLng(50.176983645297994, 6.624105313183801),
+    'name'    : 'Familie Wolters',
+    'address' : 'B&uuml;desheimer Stra&szlig;e 1',
+    'photo'   : 'https://live.staticflickr.com/65535/54218710461_ad590331f2_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
+  {  
+    'pos'     : new google.maps.LatLng(50.17358852313214, 6.620574260805694),
+    'name'    : 'Familie Bleses',
+    'address' : 'In der Noll 13',
+    'photo'   : 'https://live.staticflickr.com/65535/54218931408_966c8fcad7_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },
+  {
+    'pos'     : new google.maps.LatLng(50.17764223899639, 6.624982933647776),
+    'name'    : 'Grundschule Birresborn',
+    'address' : 'Neustra&szlig;e 7',
+    'photo'   : 'https://live.staticflickr.com/65535/54218933049_93216cb03a_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },
+  {  
+    'pos'     : new google.maps.LatLng(50.17957256539573, 6.624497297840949),
+    'name'    : 'Familie Maring',
+    'address' : 'B&uuml;desheimer Stra&szlig;e 30',
+    'photo'   : 'https://live.staticflickr.com/65535/54218931373_95d8e84e37_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
+  {  
+    'pos'     : new google.maps.LatLng(50.174440403140785, 6.624996188765442),
+    'name'    : 'Dorfverein',
+    'address' : 'Grabenstrasse',
+    'photo'   : 'https://live.staticflickr.com/65535/54221282898_657e74e617_h.jpg',
+    'photoBy' : 'Christiane Bleses' 
+  }, 
+  {
+    'pos'     : new google.maps.LatLng(50.18198987655689, 6.630953780862615),
+    'name'    : 'Familie Becker',
+    'address' : 'Kalkweg 4',
+    'photo'   : 'https://live.staticflickr.com/65535/54221451675_817bba1018_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },
+  {
+    'pos'     : new google.maps.LatLng(50.176513644993655, 6.62336951562305),
+    'name'    : 'Familie B&ouml;r&ouml;cz Stiehl',
+    'address' : 'Kopper Stra&szlig;e 18',
+    'photo'   : 'https://live.staticflickr.com/65535/54234212649_a3d871bfd5_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
+  {
+    'pos'     : new google.maps.LatLng(50.17972426581365, 6.623953233679761),
+    'name'    : 'Familie Wadle',
+    'address' : 'Birkenweg 1',
+    'photo'   : 'https://live.staticflickr.com/65535/54234214424_f92376c68d_k.jpg',
+    'photoBy' : 'Rudi Benz' 
+  },  
+
+  
 ];
 
 
